Inital beta commit

--- a/index.html
+++ b/index.html
@@ -1,52 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='css/main.css' type='text/css' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Abel|Orbitron:500' rel='stylesheet' type='text/css'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/foundation-essential/6.0.6/css/foundation.min.css' rel='stylesheet' type='text/css'>
+    <link href='css/main.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class='wrapper'>
-      <div class='inner'>
-        <div id='info' class='top_stretch'>
-          <ul>
-            <li>Base: <span id='base_name'></span></li>
-            <li>Planet: <span id='base_planet'></span></li>
-            <li>Resources: <span id='base_resources'></span></li>
-            <li>Scientists: <span id='base_scientists'></span></li>
-            <li>Rockets in base: <span id='base_rockets'></span></li>
-            <li>Rockets in use: <span id='out_rockets'></span></li>
-          </ul>
-        </div>
-        <h1 id='base_name_heading'></h1>
-        <div id='menu'>
-          <ul class='button_options'>
-            <li id='base_launch'>Launch Rocket</li>
-            <li id='base_return'>Return Rocket</li>
-            <li id='base_return_all'>Return All Rockets</li>
-            <li id='rocket_purchase'>Purchase Rocket</li>
-            <li id='scientist_purchase'>Purchase Scientist</li>
-          </ul>
-        </div>
-        <div id='summary'>
-          <p>Welcome to your base. Here you must control your station, sending
-            rockets out, returning them in, gathering resources and building the
-            space station.</p>
-
-            <p>Items may flash red when there is a problem with them, this can be a
-            lack of resources, development, pretty much anything! Keep your eyes
-            open at all times.</p>
-        </div>
-        <div id='communication_relay'>
-          <h3>Communication Relay</h3>
-          <span id='com_msg'></span>
-        </div>
-        <div id='rocket_coordinates'>
-          <h3>Last Rocket Position</h3>
-          <p id='rocket_x'></p>
-          <p id='rocket_y'></p>
-          <p id='rocket_z'></p>
-        </div>
-      </div>
-    </div>
-    <script src='js/app.js' type='text/javascript'></script>
+    <h1 class='glow center upper'>Eiden Space Program</h1>
+    <script src='js/radar.js'></script>
+    <script src='js/app.js'></script>
   </body>
 </html>
